--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - 8
   - 7
   - 6
-before_deploy: npm run predeploy
+script: npm run build
 deploy:
   provider: pages
   local-dir: build/
